--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
       content="Web site created using create-react-app"
     />
     
-   configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
         <div id="root"></div>
-  
+
   </body>
 </html>
