--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
- 
+    <meta charset="utf-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
-   configure a non-root public URL by running `npm run build`.
-    -->
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>       
     <title>React App</title>
   </head>
   <body>
-        <div id="root"></div>
-  
+    <div id="root"></div>  
   </body>
 </html>
