--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
-   configure a non-root public URL by running `npm run build`.
-    -->
+    <meta name="description" content="Web site created using create-react-app"/>
+		<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://fontawesome.com/icons/facebook-square?style=brands">
+		
     <title>React App</title>
   </head>
   <body>
