[18기 김미현 ] 위스타그램 프로젝트 초기세팅 완료

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-   configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>React App</title>
   </head>
   <body>
