--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,18 @@
       content="Web site created using create-react-app"
     />
     
-   configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="shortcut icon" href="./img/favicon-32x32.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <script
+    src="https://kit.fontawesome.com/02048a51dd.js"
+    crossorigin="anonymous"
+  ></script>
     <title>React App</title>
   </head>
   <body>
         <div id="root"></div>
-  
   </body>
 </html>
